--- a/index.html
+++ b/index.html
@@ -8,6 +8,20 @@
         <title>Nvidia</title>
     </head>
     <body>
-        
+        <header>
+            <div class = "header-left">
+                <a href = "#"><img src = "nvidia logo.png" alt = "nvidia-icon"></a>
+                <a href = "#">Products</a>
+                <a href = "#">Solutions</a>
+                <a href = "#">Industries</a>
+                <a href = "#">For You</a>
+            </div>
+            <div class = "header-right">
+                <a href = "https://www.nvidia.com/en-in/shop/">Shop</a>
+                <a href = "https://www.nvidia.in/Download/index.aspx?lang=en-in">Drivers</a>
+                <a href = "https://www.nvidia.com/en-us/support/">Support</a>
+                <a href = "#"><img src = "search-profile-icon.png" alt = "search-profile-icon"></a>
+            </div>
+        </header>
     </body>
 </html>
