--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Nvidia</title>
     </head>
     <body>
-        <header>
+        <header class = "header">
             <div class = "header-left">
                 <a href = "#"><img src = "nvidia logo.png" alt = "nvidia-icon"></a>
                 <a href = "#">Products</a>
