--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
                 <a href = "#"><img src = "search-profile-icon.png" alt = "search-profile-icon"></a>
             </div>
         </header>
+        <div class = "background-banner">
+            
+        </div>
     </body>
 </html>
