--- a/index.html
+++ b/index.html
@@ -24,7 +24,14 @@
             </div>
         </header>
         <div class = "background-banner">
-            
+            <div class = "background-banner-content">
+                <h1>"Spectacular <br>
+                    eye-candy <br>
+                    at sky-high frame <br>
+                    rates"</h1>
+                <h3>- OC3D</h3>
+                <a href = "https://www.nvidia.com/en-in/geforce/graphics-cards/40-series/rtx-4080/"><button>Out Now</button></a>
+            </div>
         </div>
     </body>
 </html>
