--- a/index.html
+++ b/index.html
@@ -36,22 +36,22 @@
         <div class = "shop-div">
             <h1>Shop</h1>
             <div class = "shop-card-container">
-                <a href = "https://www.nvidia.com/en-in/geforce/graphics-cards/">
+                <a href = "https://www.nvidia.com/en-in/geforce/graphics-cards/" class = "card1A">
                     <div class = "card1-pic"><img src = "/Users/abhis/repos/nvidiaClone/card1.jpg" alt = "card1"></div>
                     <h3>GeForce Graphics Cards</h3>
                     <p>GeForce RTX graphics cards deliver the ultimate platform for gamers and creators. Experience ray tracing, AI-powered graphics, game-winning responsiveness, and much more.</p>
                 </a>
-                <a href = "https://www.nvidia.com/en-in/geforce/gaming-laptops/">
+                <a href = "https://www.nvidia.com/en-in/geforce/gaming-laptops/" class = "card2A">
                     <div class = "card2-pic"><img src = "/Users/abhis/repos/nvidiaClone/card2.jpg" alt = "card2"></div>
                     <h3>GeForce RTX 30 Series Laptops</h3>
                     <p>Powering the world’s fastest laptops for gamers and creators. With new AI-powered Max-Q technologies that optimize laptops to deliver high performance in thin form factors.</p>
                 </a>
-                <a href = "https://www.nvidia.com/en-in/work-from-home-laptops/">
+                <a href = "https://www.nvidia.com/en-in/work-from-home-laptops/" class = "card3A">
                     <div class = "card3-pic"><img src = "/Users/abhis/repos/nvidiaClone/card3.jpg" alt = "card3"></div>
                     <h3>Work. Play. Create.</h3>
                     <p>NVIDIA laptops keep your work flowing, from wherever your office is today.</p>
                 </a>
-                <a href = "https://blogs.nvidia.com/blog/2022/10/31/in-the-nvidia-studio-october-31/">
+                <a href = "https://blogs.nvidia.com/blog/2022/10/31/in-the-nvidia-studio-october-31/" class = "card4A">
                     <div class = "card4-pic"><img src = "/Users/abhis/repos/nvidiaClone/card4.jpg" alt = "card4"></div>
                     <h3>In the NVIDIA Studio</h3>
                     <p>Your weekly celebration of extraordinary artists, inspiring art, and creator news. Learn more about the all-new GeForce RTX 40 Series for creators in this week's edition.</p>
