--- a/index.html
+++ b/index.html
@@ -58,5 +58,30 @@
                 </a>
             </div>
         </div>
+        <div class = "gaming-div">
+            <h1>Gaming</h1>
+            <div class = "gaming-card-container">
+                <a href = "https://www.nvidia.com/en-in/geforce/technologies/dlss/" class = "a1-gaming">
+                    <div class = "card1-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card1-gaming.jpg" alt = "Gaming-Card"></div>
+                    <h3>DLSS 3</h3>
+                    <p>The performance multiplier, powered by<br> AI.</p>
+                </a>
+                <a href = "https://www.nvidia.com/en-in/geforce/news/portal-with-rtx-ray-tracing/" class = "a2-gaming">
+                    <div class = "card2-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card2-gaming.png" alt = "Gaming-Card"></div>
+                    <h3>Portal with RTX</h3>
+                    <p>Reimagined with ray tracing and DLSS.</p>
+                </a>
+                <a href = "https://www.nvidia.com/en-in/geforce/news/dlss3-supports-over-35-games-apps/" class = "a3-gaming">
+                    <div class = "card3-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card3-gaming.jpg" alt = "Gaming-Card"></div>
+                    <h3>RTX. It's On.</h3>
+                    <p>The ultimate in ray tracing and AI.</p>
+                </a>
+                <a href = "https://www.nvidia.com/en-in/geforce/technologies/reflex/" class = "a4-gaming">
+                    <div class = "card4-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card4-gaming.jpg" alt = "Gaming-Card"></div>
+                    <h3>NVIDIA Reflex</h3>
+                    <p>Victory measured in milliseconds.</p>
+                </a>
+            </div>
+        </div>
     </body>
 </html>
