--- a/index.html
+++ b/index.html
@@ -83,5 +83,30 @@
                 </a>
             </div>
         </div>
+        <div class = "news-div">
+            <h1>Latest News</h1>
+            <div class = "news-card-container">
+                <a href = "https://medium.com/@nvidiaomniverse/nvidia-omniverse-fast-company-eb0fd2ee0dbb" class = "a1-news">
+                    <div class = "card1-news"><img src = "/Users/abhis/repos/nvidiaClone/card1-news.jpg"></div>
+                    <h3>Omniverse Named One of Fast<br> Company's "Next Big Things in<br> Tech"</h3>
+                    <p>Omniverse has been named to Fast<br> Company's Next Big Things in Tech<br> 2022, for excellence in innovation and<br> its advancement of the metaverse.</p>
+                </a>
+                <a href = "https://www.nvidia.com/en-in/data-center/gpu-cloud-computing/microsoft-azure/" class = "a2-news">
+                    <div class = "card2-news"><img src = "/Users/abhis/repos/nvidiaClone/card2-news.jpg"></div>
+                    <h3>NVIDIA Accelerated AI on Azure</h3>
+                    <p>Discover how NVIDIA on Azure brings AI, networking, and high performance computing to the enterprise.</p>
+                </a>
+                <a href = "https://blogs.nvidia.com/blog/2022/11/09/volvo-ex90-suv-ai-nvidia-drive/" class = "a3-news">
+                    <div class = "card3-news"><img src = "/Users/abhis/repos/nvidiaClone/card3-news.jpg"></div>
+                    <h3>The New Volvo EX90, Built on NVIDIA DRIVE Orin</h3>
+                    <p>Volvo Cars is ushering in a new era of<br> safety with its AI-powered electric SUV.</p>
+                </a>
+                <a href = "https://blogs.nvidia.com/blog/2022/11/09/rescale-cloud-hpc/" class = "a4-news">
+                    <div class = "card4-news"><img src = "/Users/abhis/repos/nvidiaClone/card4-news.jpg"></div>
+                    <h3>NVIDIA AI Turbocharges Industrial Research</h3>
+                    <p>NVIDIA teams with Rescale to bring the full stack of NVIDIA AI software to every major cloud service provider.</p>
+                </a>
+            </div>
+        </div>
     </body>
 </html>
