--- a/index.html
+++ b/index.html
@@ -87,24 +87,48 @@
             <h1>Latest News</h1>
             <div class = "news-card-container">
                 <a href = "https://medium.com/@nvidiaomniverse/nvidia-omniverse-fast-company-eb0fd2ee0dbb" class = "a1-news">
-                    <div class = "card1-news"><img src = "/Users/abhis/repos/nvidiaClone/card1-news.jpg"></div>
+                    <div class = "card1-news"><img src = "/Users/abhis/repos/nvidiaClone/card1-news.jpg" alt = "card1-news"></div>
                     <h3>Omniverse Named One of Fast<br> Company's "Next Big Things in<br> Tech"</h3>
                     <p>Omniverse has been named to Fast<br> Company's Next Big Things in Tech<br> 2022, for excellence in innovation and<br> its advancement of the metaverse.</p>
                 </a>
                 <a href = "https://www.nvidia.com/en-in/data-center/gpu-cloud-computing/microsoft-azure/" class = "a2-news">
-                    <div class = "card2-news"><img src = "/Users/abhis/repos/nvidiaClone/card2-news.jpg"></div>
+                    <div class = "card2-news"><img src = "/Users/abhis/repos/nvidiaClone/card2-news.jpg" alt = "card2-news"></div>
                     <h3>NVIDIA Accelerated AI on Azure</h3>
                     <p>Discover how NVIDIA on Azure brings AI, networking, and high performance computing to the enterprise.</p>
                 </a>
                 <a href = "https://blogs.nvidia.com/blog/2022/11/09/volvo-ex90-suv-ai-nvidia-drive/" class = "a3-news">
-                    <div class = "card3-news"><img src = "/Users/abhis/repos/nvidiaClone/card3-news.jpg"></div>
+                    <div class = "card3-news"><img src = "/Users/abhis/repos/nvidiaClone/card3-news.jpg" alt = "card3-news"></div>
                     <h3>The New Volvo EX90, Built on NVIDIA DRIVE Orin</h3>
                     <p>Volvo Cars is ushering in a new era of<br> safety with its AI-powered electric SUV.</p>
                 </a>
                 <a href = "https://blogs.nvidia.com/blog/2022/11/09/rescale-cloud-hpc/" class = "a4-news">
-                    <div class = "card4-news"><img src = "/Users/abhis/repos/nvidiaClone/card4-news.jpg"></div>
+                    <div class = "card4-news"><img src = "/Users/abhis/repos/nvidiaClone/card4-news.jpg" alt = "card4-news"></div>
                     <h3>NVIDIA AI Turbocharges Industrial Research</h3>
                     <p>NVIDIA teams with Rescale to bring the full stack of NVIDIA AI software to every major cloud service provider.</p>
+                </a>
+            </div>
+        </div>
+        <div class = "news-div-part2">
+            <div class = "news-card-container-part2">
+                <a href = "https://developer.nvidia.com/blog/anyone-can-build-metaverse-applications-with-new-beta-release-of-nvidia-omniverse/" class = "a5-news">
+                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card5-news.jpg" alt = "card5-news"></div>
+                    <h3>New Beta Release of<br> Omniverse Available</h3>
+                    <p>The new release of Omniverse provides<br> major updates to core applications<br> including Kit, Code, Create, Machinima<br> and more that make the platform faster<br> and more flexible than ever before.</p>
+                </a>
+                <a href = "https://blogs.nvidia.com/blog/2022/09/20/heavy-ai-digital-twin-omniverse/" class = "a6-news">
+                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card6-news.jpg" alt = "card6-news"></div>
+                    <h3>HEAVY.AI Delivers Digital Twin<br> for Telco Network Planning<br> and Operations</h3>
+                    <p>HEAVY.AI is using NVIDIA Omniverse™<br> to help telcos optimize wireless site<br> placements, reducing the complexity of<br> operations.</p>
+                </a>
+                <a href = "https://nvidianews.nvidia.com/news/nvidia-and-deloitte-to-bring-new-services-built-on-nvidia-ai-and-omniverse-platforms-to-the-worlds-enterprises" class = "a7-news">
+                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card7-news.png" alt = "card7-news"></div>
+                    <h3>Deloitte Expands Innovative<br> Solutions with NVIDIA AI and<br> Omniverse Platforms</h3>
+                    <p>Enabling cutting-edge applications for<br> enterprises, including edge AI, speech<br> AI, recommender systems, chatbots,<br> cybersecurity, metaverse applications,<br> digital twins, and more.</p>
+                </a>
+                <a href = "https://blogs.nvidia.com/blog/2022/09/20/omniverse-ace-interactive-avatars/" class = "a8-news">
+                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card8-news.jpg" alt = "card8-news"></div>
+                    <h3>NVIDIA Omniverse ACE<br> Enables Easier, Faster<br> Deployment of Interactive<br> Avatars</h3>
+                    <p>Meet Violet, an interactive AI-powered<br> avatar built using the NVIDIA Tokkio<br> application framework. This cloud-based<br> virtual assistant leverages NVIDIA<br> Omniverse Avatar Cloud Engine (ACE) to<br> see, converse with users and make<br> intelligent recommendations.</p>
                 </a>
             </div>
         </div>
