--- a/index.html
+++ b/index.html
@@ -132,5 +132,59 @@
                 </a>
             </div>
         </div>
+        <div class = "imp-links-div">
+            <div class = "imp-links-container">
+                <div class = "imp-links-div1">
+                    <h3>Corporate Information</h3>
+                    <div class = "underline-div1"></div>
+                    <div class = "imp-links1">
+                        <ul class = "links-1">
+                            <li><a href = "https://www.nvidia.com/en-in/about-nvidia/">About Us</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/about-nvidia/ai-computing/">Corporate Overview</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/technologies/">Technologies</a></li>
+                            <li><a href = "https://www.nvidia.com/en-us/research">Research</a></li>
+                            <li><a href = "https://investor.nvidia.com/home/default.aspx">Investors</a></li>
+                            <li><a href = "https://www.nvidia.com/en-us/csr">Social Responsibility</a></li>
+                            <li><a href = "https://www.nvidia.com/en-us/foundation">NVIDIA Foundation</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class = "imp-links-div2">
+                    <h3>Get Involved</h3>
+                    <div class = "underline-div2"></div>
+                    <div class = "imp-links2">
+                        <ul class = "links-2">
+                            <li><a href = "https://www.nvidia.com/en-in/forums/">Forums</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/about-nvidia/careers/">Careers</a></li>
+                            <li><a href = "https://developer.nvidia.com/">Developer Home</a></li>
+                            <li><a href = "https://developer.nvidia.com/join">Join the Developer Program</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/about-nvidia/partners/">NVIDIA Partner Network</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/deep-learning-ai/startups/">Startups and VCs</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/training/">Technical Training</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/ai-data-science/professional-services/">Professional Services for Data Science</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class = "imp-links-div3">
+                    <h3>News & Events</h3>
+                    <div class = "underline-div3"></div>
+                    <div class = "imp-links3">
+                        <ul class = "links-3">
+                            <li><a href = "https://nvidianews.nvidia.com/">Newsroom</a></li>
+                            <li><a href = "https://blogs.nvidia.com/">NVIDIA Blog</a></li>
+                            <li><a href = "https://www.nvidia.com/en-us/about-nvidia/webinar-portal">Webinars</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/preferences/email-signup/">Stay Informed</a></li>
+                            <li><a href = "https://www.nvidia.com/en-in/events/">Events Calendar</a></li>
+                            <li><a href = "https://www.nvidia.com/en-us/gtc/">NVIDIA GTC</a></li>
+                            <li><a href = "https://www.nvidia.com/en-us/on-demand/">NVIDIA On-Demand</a></li>
+                        </ul>
+                    </div>
+                </div>
+
+            </div>
+            <div class = "social-links"></div>
+        </div>
     </body>
 </html>
