--- a/index.html
+++ b/index.html
@@ -184,7 +184,21 @@
                 </div>
 
             </div>
-            <div class = "social-links"></div>
+            <div class = "social-links">
+                <div class = "social-links-container1">
+                    <img src = "/Users/abhis/Downloads/download.png" alt = "icon-mail">
+                    <span>Sign Up for NVIDIA News</span>
+                    <a href = "https://www.nvidia.com/en-in/preferences/email-signup/"><button>Subscribe</button></a>
+                </div>
+                <div class = "social-links-container2">
+                    <span>Follow NVIDIA</span>
+                    <a href = "https://www.facebook.com/NVIDIA" class = "fb-icon" ><img src = "./social-icon-1.png" alt = "social-icon-1"></a>
+                    <a href = "https://twitter.com/nvidia"><img src = "./social-icon-2.png" alt = "social-icon-2"></a>
+                    <a href = "https://www.linkedin.com/company/nvidia/"><img src = "./social-icon-3.png" alt = "social-icon-3"></a>
+                    <a href = "https://www.instagram.com/nvidia/?hl=en"><img src = "./social-icon-4.png" alt = "social-icon-4"></a>
+                    <a href = "https://www.youtube.com/user/nvidia"><img src = "./social-icon-5.png" alt = "social-icon-5"></a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
