--- a/index.html
+++ b/index.html
@@ -200,5 +200,34 @@
                 </div>
             </div>
         </div>
+
+        <footer class = "footer-div">
+            <div class = "footer-section1">
+                <img src = "./nvidia-icon.png" alt = "Nvidia Icon">
+                <a href = "https://www.nvidia.com/en-us/location-selector/">India</a>
+
+            </div>
+            <div class = "footer-section2">
+                <a href = "https://www.nvidia.com/en-in/about-nvidia/privacy-policy/">Privacy Policy</a>
+                <div class = "divider-footer-links"></div>
+                <a href = "http://www.nvidia.in/object/legal-info-in.html">Legal Info</a>
+                <div class = "divider-footer-links"></div>
+                <a href = "https://www.nvidia.com/en-in/about-nvidia/accessibility/">Accessibility</a>
+                <div class = "divider-footer-links"></div>
+                <a href = "https://www.nvidia.com/en-in/security/">Product Security</a>
+                <div class = "divider-footer-links"></div>
+                <a href = "https://www.nvidia.com/en-in/contact/asia/">Contact</a>
+            </div>
+
+            <div class = "footer-section3">
+                <p>Copyright © 2022 NVIDIA Corporation</p>
+            </div>
+        </footer>
+
+        <div class = "trademark-div">
+            <p>Developed and Maintained by © Abhishek Choudhari</p>
+            <a href = "https://github.com/AbhishekDevJr"><img src = "/Users/abhis/Downloads/icons8-github-48.png" alt = "github-icon"></a>
+            <a href = "https://www.linkedin.com/in/abhishek-choudhari-408526173/"><img src = "./social-icon-3.png" alt = "linkedin-icon"></a>
+        </div>
     </body>
 </html>
