after deploy changes-1

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <h1>Shop</h1>
             <div class = "shop-card-container">
                 <a href = "https://www.nvidia.com/en-in/geforce/graphics-cards/" class = "card1A">
-                    <div class = "card1-pic"><img src = "/Users/abhis/repos/nvidiaClone/card1.jpg" alt = "card1"></div>
+                    <div class = "card1-pic"><img src = "card1.jpg" alt = "card1"></div>
                     <h3>GeForce Graphics Cards</h3>
                     <p>GeForce RTX graphics cards deliver the ultimate platform for gamers and<br> creators. Experience ray tracing, AI-<br>powered graphics, game-winning responsiveness, and much more.</p>
                 </a>
