--- a/index.html
+++ b/index.html
@@ -42,17 +42,17 @@
                     <p>GeForce RTX graphics cards deliver the ultimate platform for gamers and<br> creators. Experience ray tracing, AI-<br>powered graphics, game-winning responsiveness, and much more.</p>
                 </a>
                 <a href = "https://www.nvidia.com/en-in/geforce/gaming-laptops/" class = "card2A">
-                    <div class = "card2-pic"><img src = "/Users/abhis/repos/nvidiaClone/card2.jpg" alt = "card2"></div>
+                    <div class = "card2-pic"><img src = "card2.jpg" alt = "card2"></div>
                     <h3>GeForce RTX 30 Series Laptops</h3>
                     <p>Powering the world’s fastest laptops for<br> gamers and creators. With new AI-<br>powered Max-Q technologies that<br> optimize laptops to deliver high<br> performance in thin form factors.</p>
                 </a>
                 <a href = "https://www.nvidia.com/en-in/work-from-home-laptops/" class = "card3A">
-                    <div class = "card3-pic"><img src = "/Users/abhis/repos/nvidiaClone/card3.jpg" alt = "card3"></div>
+                    <div class = "card3-pic"><img src = "card3.jpg" alt = "card3"></div>
                     <h3>Work. Play. Create.</h3>
                     <p>NVIDIA laptops keep your work flowing,<br> from wherever your office is today.</p>
                 </a>
                 <a href = "https://blogs.nvidia.com/blog/2022/10/31/in-the-nvidia-studio-october-31/" class = "card4A">
-                    <div class = "card4-pic"><img src = "/Users/abhis/repos/nvidiaClone/card4.jpg" alt = "card4"></div>
+                    <div class = "card4-pic"><img src = "card4.jpg" alt = "card4"></div>
                     <h3>In the NVIDIA Studio</h3>
                     <p>Your weekly celebration of extraordinary<br> artists, inspiring art, and creator news.<br> Learn more about the all-new GeForce<br> RTX 40 Series for creators in this week's edition.</p>
                 </a>
@@ -62,22 +62,22 @@
             <h1>Gaming</h1>
             <div class = "gaming-card-container">
                 <a href = "https://www.nvidia.com/en-in/geforce/technologies/dlss/" class = "a1-gaming">
-                    <div class = "card1-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card1-gaming.jpg" alt = "Gaming-Card"></div>
+                    <div class = "card1-gaming"><img src = "card1-gaming.jpg" alt = "Gaming-Card"></div>
                     <h3>DLSS 3</h3>
                     <p>The performance multiplier, powered by<br> AI.</p>
                 </a>
                 <a href = "https://www.nvidia.com/en-in/geforce/news/portal-with-rtx-ray-tracing/" class = "a2-gaming">
-                    <div class = "card2-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card2-gaming.png" alt = "Gaming-Card"></div>
+                    <div class = "card2-gaming"><img src = "card2-gaming.png" alt = "Gaming-Card"></div>
                     <h3>Portal with RTX</h3>
                     <p>Reimagined with ray tracing and DLSS.</p>
                 </a>
                 <a href = "https://www.nvidia.com/en-in/geforce/news/dlss3-supports-over-35-games-apps/" class = "a3-gaming">
-                    <div class = "card3-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card3-gaming.jpg" alt = "Gaming-Card"></div>
+                    <div class = "card3-gaming"><img src = "card3-gaming.jpg" alt = "Gaming-Card"></div>
                     <h3>RTX. It's On.</h3>
                     <p>The ultimate in ray tracing and AI.</p>
                 </a>
                 <a href = "https://www.nvidia.com/en-in/geforce/technologies/reflex/" class = "a4-gaming">
-                    <div class = "card4-gaming"><img src = "/Users/abhis/repos/nvidiaClone/card4-gaming.jpg" alt = "Gaming-Card"></div>
+                    <div class = "card4-gaming"><img src = "card4-gaming.jpg" alt = "Gaming-Card"></div>
                     <h3>NVIDIA Reflex</h3>
                     <p>Victory measured in milliseconds.</p>
                 </a>
@@ -87,22 +87,22 @@
             <h1>Latest News</h1>
             <div class = "news-card-container">
                 <a href = "https://medium.com/@nvidiaomniverse/nvidia-omniverse-fast-company-eb0fd2ee0dbb" class = "a1-news">
-                    <div class = "card1-news"><img src = "/Users/abhis/repos/nvidiaClone/card1-news.jpg" alt = "card1-news"></div>
+                    <div class = "card1-news"><img src = "card1-news.jpg" alt = "card1-news"></div>
                     <h3>Omniverse Named One of Fast<br> Company's "Next Big Things in<br> Tech"</h3>
                     <p>Omniverse has been named to Fast<br> Company's Next Big Things in Tech<br> 2022, for excellence in innovation and<br> its advancement of the metaverse.</p>
                 </a>
                 <a href = "https://www.nvidia.com/en-in/data-center/gpu-cloud-computing/microsoft-azure/" class = "a2-news">
-                    <div class = "card2-news"><img src = "/Users/abhis/repos/nvidiaClone/card2-news.jpg" alt = "card2-news"></div>
+                    <div class = "card2-news"><img src = "card2-news.jpg" alt = "card2-news"></div>
                     <h3>NVIDIA Accelerated AI on Azure</h3>
                     <p>Discover how NVIDIA on Azure brings AI, networking, and high performance computing to the enterprise.</p>
                 </a>
                 <a href = "https://blogs.nvidia.com/blog/2022/11/09/volvo-ex90-suv-ai-nvidia-drive/" class = "a3-news">
-                    <div class = "card3-news"><img src = "/Users/abhis/repos/nvidiaClone/card3-news.jpg" alt = "card3-news"></div>
+                    <div class = "card3-news"><img src = "card3-news.jpg" alt = "card3-news"></div>
                     <h3>The New Volvo EX90, Built on NVIDIA DRIVE Orin</h3>
                     <p>Volvo Cars is ushering in a new era of<br> safety with its AI-powered electric SUV.</p>
                 </a>
                 <a href = "https://blogs.nvidia.com/blog/2022/11/09/rescale-cloud-hpc/" class = "a4-news">
-                    <div class = "card4-news"><img src = "/Users/abhis/repos/nvidiaClone/card4-news.jpg" alt = "card4-news"></div>
+                    <div class = "card4-news"><img src = "card4-news.jpg" alt = "card4-news"></div>
                     <h3>NVIDIA AI Turbocharges Industrial Research</h3>
                     <p>NVIDIA teams with Rescale to bring the full stack of NVIDIA AI software to every major cloud service provider.</p>
                 </a>
@@ -111,22 +111,22 @@
         <div class = "news-div-part2">
             <div class = "news-card-container-part2">
                 <a href = "https://developer.nvidia.com/blog/anyone-can-build-metaverse-applications-with-new-beta-release-of-nvidia-omniverse/" class = "a5-news">
-                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card5-news.jpg" alt = "card5-news"></div>
+                    <div class = "card5-news"><img src = "card5-news.jpg" alt = "card5-news"></div>
                     <h3>New Beta Release of<br> Omniverse Available</h3>
                     <p>The new release of Omniverse provides<br> major updates to core applications<br> including Kit, Code, Create, Machinima<br> and more that make the platform faster<br> and more flexible than ever before.</p>
                 </a>
                 <a href = "https://blogs.nvidia.com/blog/2022/09/20/heavy-ai-digital-twin-omniverse/" class = "a6-news">
-                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card6-news.jpg" alt = "card6-news"></div>
+                    <div class = "card5-news"><img src = "card6-news.jpg" alt = "card6-news"></div>
                     <h3>HEAVY.AI Delivers Digital Twin<br> for Telco Network Planning<br> and Operations</h3>
                     <p>HEAVY.AI is using NVIDIA Omniverse™<br> to help telcos optimize wireless site<br> placements, reducing the complexity of<br> operations.</p>
                 </a>
                 <a href = "https://nvidianews.nvidia.com/news/nvidia-and-deloitte-to-bring-new-services-built-on-nvidia-ai-and-omniverse-platforms-to-the-worlds-enterprises" class = "a7-news">
-                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card7-news.png" alt = "card7-news"></div>
+                    <div class = "card5-news"><img src = "card7-news.png" alt = "card7-news"></div>
                     <h3>Deloitte Expands Innovative<br> Solutions with NVIDIA AI and<br> Omniverse Platforms</h3>
                     <p>Enabling cutting-edge applications for<br> enterprises, including edge AI, speech<br> AI, recommender systems, chatbots,<br> cybersecurity, metaverse applications,<br> digital twins, and more.</p>
                 </a>
                 <a href = "https://blogs.nvidia.com/blog/2022/09/20/omniverse-ace-interactive-avatars/" class = "a8-news">
-                    <div class = "card5-news"><img src = "/Users/abhis/repos/nvidiaClone/card8-news.jpg" alt = "card8-news"></div>
+                    <div class = "card5-news"><img src = "card8-news.jpg" alt = "card8-news"></div>
                     <h3>NVIDIA Omniverse ACE<br> Enables Easier, Faster<br> Deployment of Interactive<br> Avatars</h3>
                     <p>Meet Violet, an interactive AI-powered<br> avatar built using the NVIDIA Tokkio<br> application framework. This cloud-based<br> virtual assistant leverages NVIDIA<br> Omniverse Avatar Cloud Engine (ACE) to<br> see, converse with users and make<br> intelligent recommendations.</p>
                 </a>
@@ -226,7 +226,7 @@
 
         <div class = "trademark-div">
             <p>Developed and Maintained by © Abhishek Choudhari</p>
-            <a href = "https://github.com/AbhishekDevJr"><img src = "/Users/abhis/Downloads/icons8-github-48.png" alt = "github-icon"></a>
+            <a href = "https://github.com/AbhishekDevJr"><img src = "icons8-github-48.png" alt = "github-icon"></a>
             <a href = "https://www.linkedin.com/in/abhishek-choudhari-408526173/"><img src = "./social-icon-3.png" alt = "linkedin-icon"></a>
         </div>
     </body>
