--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 
         <div class = "trademark-div">
             <p>Developed and Maintained by © Abhishek Choudhari</p>
-            <a href = "https://github.com/AbhishekDevJr"><img src = "icons8-github-48.png" alt = "github-icon"></a>
+            <a href = "https://github.com/AbhishekDevJr"><img src = "./icons8-github-48.png" alt = "github-icon"></a>
             <a href = "https://www.linkedin.com/in/abhishek-choudhari-408526173/"><img src = "./social-icon-3.png" alt = "linkedin-icon"></a>
         </div>
     </body>
