--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
             <div class = "social-links">
                 <div class = "social-links-container1">
-                    <img src = "/Users/abhis/Downloads/download.png" alt = "icon-mail">
+                    <img src = "download.png" alt = "icon-mail">
                     <span>Sign Up for NVIDIA News</span>
                     <a href = "https://www.nvidia.com/en-in/preferences/email-signup/"><button>Subscribe</button></a>
                 </div>
